--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,4 @@
-auxiliary.org-netbeans-modules-php-phpdoc.target=
 copy.src.files=false
-copy.src.target=/var/www/PhpProject1
-debug.url=DEFAULT_URL
-remote.connection=no-config
-remote.upload=ON_RUN
+copy.src.target=/var/www/bluecaffeine
 run.as=LOCAL
-url=http://127.0.0.1/bluecaffeine/
+url=http://localhost/bluecaffeine/
